support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_bad_extern.i
%module xxx

extern "INTERCAL" {
   int foo(int);
};

extern "INTERCAL" int blah(int);
